--- a/index.html
+++ b/index.html
@@ -1,65 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vault & Garden</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: radial-gradient(circle at top right, #0d1b2a, #1b263b);
-      color: #e0e1dd;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      overflow: hidden;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-      background: linear-gradient(45deg, #00d4ff, #0077ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      opacity: 0.8;
-    }
-    .btn {
-      margin-top: 30px;
-      padding: 12px 30px;
-      background: #0077ff;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: 0.3s;
-      text-decoration: none;
-    }
-    .btn:hover {
-      background: #00d4ff;
-    }
-    footer {
-      position: absolute;
-      bottom: 10px;
-      font-size: 0.9rem;
-      opacity: 0.6;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vault & Garden</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <h1>Welcome to Vault & Garden</h1>
-  <p>Your personal digital vault — a creative hub to explore, store, and showcase your work.</p>
-  <a href="https://github.com/jameswalton69/vault-and-garden" target="_blank" class="btn">Visit the Repository</a>
-  <footer>© 2025 Vault & Garden</footer>
+    <header>
+        <h1>Vault & Garden</h1>
+        <nav>
+            <a href="vault/index.html">Vault</a>
+            <a href="garden/index.html">Garden</a>
+        </nav>
+    </header>
+    <div class="container">
+        <h2>Welcome!</h2>
+        <p>Your personal digital Vault & Garden. Click above to explore your files and thoughts.</p>
+    </div>
+    <footer>© 2025 Vault & Garden</footer>
 </body>
 </html>
