--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Vault & Garden</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+<img src="assets/logo-home.svg" alt="Vault & Garden Logo" class="logo">
+<title>Vault & Garden</title>
+
 <body>
     <header>
         <h1>Vault & Garden</h1>
