--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 
 <body>
     <header>
-        <h1>Vault & Garden</h1>
-        <nav>
-            <a href="vault/index.html">Vault</a>
-            <a href="garden/index.html">Garden</a>
-        </nav>
+        <img src="../assets/logo-home.svg" alt="Vault & Garden Logo" class="logo">
+<h1>Vault & Garden</h1>
+<nav>
+    <a href="../index.html">Home</a>
+    <a href="vault/index.html">Vault</a>
+    <a href="garden/index.html">Garden</a>
+    <a href="code-lab/index.html">Code Lab</a>
+</nav>
+
     </header>
     <div class="container">
         <h2>Welcome!</h2>
