--- a/garden/index.html
+++ b/garden/index.html
@@ -3,21 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Garden</title>
+<title>Garden - Vault & Garden</title>
+<link rel="icon" href="../assets/favicon.svg" type="image/svg+xml">
 <link rel="stylesheet" href="assets/garden.css">
 </head>
 <body>
 <header>
-    <h1>Garden</h1>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../vault/index.html">Vault</a>
-    </nav>
+<img src="../assets/logo-home.svg" alt="Vault & Garden Logo" class="logo">
+<h1>Garden</h1>
+<nav>
+<a href="../index.html">Home</a>
+<a href="../vault/index.html">Vault</a>
+<a href="../code-lab/index.html">Code Lab</a>
+<a href="../upload-ui/index.html">Upload UI</a>
+</nav>
 </header>
 
 <div class="container">
-    <div id="quoteContainer"></div>
-    <button id="zenBtn">Toggle Zen Mode</button>
+<div id="quoteContainer"></div>
+<button id="zenBtn">Toggle Zen Mode</button>
+<div class="garden-images">
+<img src="https://www.playbook.com/s/files34/bkBdMJvD5sXY9U9txbu5KgPj?assetToken=m7ZLuUPpz3TaMar3L9WG7JwX" alt="Garden Photo 1" style="width:200px;margin:10px;border-radius:10px;">
+<img src="https://www.playbook.com/s/files34/j1arTpHBKUsEfjVqZGDaCsJy?assetToken=jR9bsa8kqfxyvNYa8hEvRbiS" alt="Sky" style="width:200px;margin:10px;border-radius:10px;">
+</div>
 </div>
 
 <footer>© 2025 Vault & Garden</footer>
