--- a/vault/index.html
+++ b/vault/index.html
@@ -3,30 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vault</title>
+<title>Vault - Vault & Garden</title>
+<link rel="icon" href="../assets/favicon.svg" type="image/svg+xml">
 <link rel="stylesheet" href="assets/vault.css">
 </head>
 <body>
 <header>
-    <h1>Vault</h1>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../garden/index.html">Garden</a>
-    </nav>
+<img src="../assets/logo-home.svg" alt="Vault & Garden Logo" class="logo">
+<h1>Vault</h1>
+<nav>
+<a href="../index.html">Home</a>
+<a href="../garden/index.html">Garden</a>
+<a href="../code-lab/index.html">Code Lab</a>
+<a href="../upload-ui/index.html">Upload UI</a>
+</nav>
 </header>
 
 <div class="container">
-    <input type="text" id="searchBar" placeholder="Search Vault Files...">
-    <button id="randomBtn">Open Random Vault File</button>
-
-    <div class="grid" id="vaultGrid">
-        <!-- Vault files will be populated by JS -->
-    </div>
+<input type="text" id="searchBar" placeholder="Search files..." style="width:100%;padding:10px;margin:10px 0;border-radius:10px;">
+<button id="randomBtn">Open Random File</button>
+<div id="vaultGrid" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:1rem;margin-top:2rem;"></div>
 </div>
 
 <footer>© 2025 Vault & Garden</footer>
 <script src="assets/vault.js"></script>
 </body>
 </html>
-
-
