--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vault & Garden</title>
-<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
-<link rel="stylesheet" href="assets/style.css">
-<style>
-body {
-    background: linear-gradient(135deg, #00d4ff, #ffcc00);
-    font-family: 'Poppins', sans-serif;
-    color: #0d0d0d;
-    margin:0;
-}
-header {
-    display:flex;
-    align-items:center;
-    padding:1rem 2rem;
-    background-color:rgba(17,17,17,0.9);
-}
-header .logo {height:50px;margin-right:15px;}
-nav a {color:#0d0d0d;margin-left:15px;text-decoration:none;font-weight:bold;}
-nav a:hover {color:#ffcc00;}
-.main-banner img {width:100%;max-height:400px;object-fit:cover;border-radius:15px;margin-top:1rem;}
-.container {max-width:900px;margin:2rem auto;text-align:center;}
-footer {text-align:center;padding:1rem;font-size:0.9rem;background-color:rgba(17,17,17,0.9);margin-top:2rem;}
-</style>
-</head>
-<body>
-<header>
-<img src="assets/logo-home.svg" alt="Vault & Garden Logo" class="logo">
-<h1>Vault & Garden</h1>
-<nav>
-<a href="vault/index.html">Vault</a>
-<a href="garden/index.html">Garden</a>
-<a href="code-lab/index.html">Code Lab</a>
-<a href="upload-ui/index.html">Upload UI</a>
-</nav>
-</header>
-
-<div class="container">
-<h2>Welcome to Vault & Garden</h2>
-<p>Explore your files, media, and code in one place.</p>
-<div class="main-banner">
-<img src="https://www.playbook.com/s/files34/Uc9mRpfrSdUFe94aHcq5PEK7?assetToken=uiosrTP1xFdUNkVZqHvYPf55" alt="Home Banner">
-</div>
-</div>
-
-<footer>© 2025 Vault & Garden</footer>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Vault & Garden</title></head><body>Home Page</body></html>
