--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<!DOCTYPE html><html><head><title>Vault & Garden</title></head><body>Home Page</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Vault & Garden</title>
+<link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+<link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
+<header>
+    <img src="assets/logo-home.svg" alt="Vault & Garden Logo" class="logo">
+    <h1>Vault & Garden</h1>
+    <nav>
+        <a href="vault/index.html">Vault</a>
+        <a href="garden/index.html">Garden</a>
+        <a href="code-lab/index.html">Code Lab</a>
+        <a href="upload-ui/index.html">Upload UI</a>
+    </nav>
+</header>
+
+<div class="main-container">
+    <h2>Welcome to Vault & Garden</h2>
+    <p>Explore your files, images, PDFs, and experiment in Code Lab.</p>
+    <div class="home-images">
+        <img src="https://www.playbook.com/s/files34/Uc9mRpfrSdUFe94aHcq5PEK7?assetToken=uiosrTP1xFdUNkVZqHvYPf55" alt="Home Image">
+    </div>
+</div>
+
+<footer>© 2025 Vault & Garden</footer>
+</body>
+</html>
