--- a/vault/index.html
+++ b/vault/index.html
@@ -1,1 +1,31 @@
-<html><body>Vault Page</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Vault</title>
+<link rel="icon" href="../assets/favicon.svg" type="image/svg+xml">
+<link rel="stylesheet" href="assets/vault.css">
+</head>
+<body>
+<header>
+    <img src="../assets/logo-home.svg" alt="Vault & Garden Logo" class="logo">
+    <h1>Vault</h1>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../garden/index.html">Garden</a>
+        <a href="../code-lab/index.html">Code Lab</a>
+        <a href="../upload-ui/index.html">Upload UI</a>
+    </nav>
+</header>
+
+<div class="container">
+    <input type="text" id="searchBar" placeholder="Search files..." />
+    <button id="randomBtn">Open Random File</button>
+    <div id="vaultGrid" class="grid"></div>
+</div>
+
+<footer>© 2025 Vault & Garden</footer>
+<script src="assets/vault.js"></script>
+</body>
+</html>
