--- a/code-lab/index.html
+++ b/code-lab/index.html
@@ -1,1 +1,30 @@
-<html><body>Code Lab</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Code Lab</title>
+<link rel="icon" href="../assets/favicon.svg" type="image/svg+xml">
+<link rel="stylesheet" href="assets/codelab.css">
+</head>
+<body>
+<header>
+    <img src="../assets/logo-codelab.svg" alt="Code Lab Logo" class="logo">
+    <h1>Code Lab</h1>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../vault/index.html">Vault</a>
+        <a href="../garden/index.html">Garden</a>
+        <a href="../upload-ui/index.html">Upload UI</a>
+    </nav>
+</header>
+
+<div class="container">
+    <h2>Sample Codes</h2>
+    <div id="codeGrid" class="grid"></div>
+</div>
+
+<footer>© 2025 Vault & Garden</footer>
+<script src="assets/codelab.js"></script>
+</body>
+</html>
