--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>Welcome to Vault & Garden</h2>
     <p>Explore your files, images, PDFs, and experiment in Code Lab.</p>
     <div class="home-images">
-        <img src="https://www.playbook.com/s/files34/Uc9mRpfrSdUFe94aHcq5PEK7?assetToken=uiosrTP1xFdUNkVZqHvYPf55" alt="Home Image">
+        <img src="https://www.playbook.com/s/files34/all-files?_gl=1%2A17zn5xu%2A_gcl_au%2AMTMwNzY2Mjc1Ny4xNzYwMTA3MDgz%2A_ga%2AMTc1NjEzODU0NS4xNzYwMTA3MDgz%2A_ga_MZJK5P4N2X%2AczE3NjAyNjQxNzUkbzQkZzAkdDE3NjAyNjQxNzUkajYwJGwwJGgyODI5OTU5NDc.&assetToken=uiosrTP1xFdUNkVZqHvYPf55" alt="Home Image">
     </div>
 </div>
 
