--- a/code-lab/index.html
+++ b/code-lab/index.html
@@ -16,6 +16,7 @@
         <a href="../vault/index.html">Vault</a>
         <a href="../garden/index.html">Garden</a>
         <a href="../upload-ui/index.html">Upload UI</a>
+        <a herf="../my-python-ide/index.html">My Python IDE</a>
     </nav>
 </header>
 
