--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="garden/index.html">Garden</a>
         <a href="code-lab/index.html">Code Lab</a>
         <a href="upload-ui/index.html">Upload UI</a>
+        <a herf="my-python-ide/index.html">My Python IDE</a>
     </nav>
 </header>
 
