--- a/upload-ui/index.html
+++ b/upload-ui/index.html
@@ -16,6 +16,7 @@
         <a href="../vault/index.html">Vault</a>
         <a href="../garden/index.html">Garden</a>
         <a href="../code-lab/index.html">Code Lab</a>
+        <a herf="../my-python-ide/index.html">My Python IDE</a>
     </nav>
 </header>
 
