--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <a href="garden/index.html">Garden</a>
         <a href="code-lab/index.html">Code Lab</a>
         <a href="upload-ui/index.html">Upload UI</a>
-        <a herf="my-python-ide/index.html">My Python IDE</a>
+        <!-- Example button or menu item for Python IDE -->
+        <a href="python-ide/index.html" class="btn btn-primary">
+        🐍 Try the Python IDE
+        </a>
+
     </nav>
 </header>
 
