--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="screen-overlay"></div>
+
   <div class="glitch-bg"></div>
   <header>
     <h1 class="glitch-text" data-text="The Book of Errors">The Book of Errors</h1>
