--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ bleed('it heard you.');
   </main>
 
   <div id="eye"></div>
+  <audio id="horror-audio" src="assets/sound1.mp3" loop preload="auto"></audio>
+<button id="music-toggle" class="btn" style="position:fixed;bottom:22px;right:24px;z-index:9999">
+  <span id="music-icon">🔊</span> Music
+</button>
+
   <script src="script.js"></script>
 </body>
 </html>
