--- a/index.html
+++ b/index.html
@@ -62,5 +62,14 @@ bleed('it heard you.');
 </button>
 
   <script src="script.js"></script>
+  <footer style="text-align:center; padding: 20px; background-color:#f2f2f2; font-family: Arial, sans-serif; margin-top: 40px;">
+  <p>🎉 Check out my Birthday Repos 🎉</p>
+  <p>
+    Repo 1: <a href="https://jameswalton69.github.io/birthday/" target="_blank">https://jameswalton69.github.io/birthday/</a><br>
+    Repo 2: <a href="https://jameswalton69.github.io/birthday2/" target="_blank">https://jameswalton69.github.io/birthday2/</a>
+  </p>
+</footer>
+
 </body>
 </html>
+
