--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
   <div id="eye"></div>
   <script src="script.js"></script>
-  <footer style="text-align:center; padding: 20px; background-color:#f2f2f2; font-family: Arial, sans-serif; margin-top: 40px;">
+  <footer style="text-align:center; padding: 20px;  font-family: Arial, sans-serif; margin-top: 40px;">
   <p>🎉 Check out my Birthday Repos 🎉</p>
   <p>
     Repo 1: <a href="https://jameswalton69.github.io/birthday/" target="_blank">https://jameswalton69.github.io/birthday/</a><br>
@@ -42,4 +42,5 @@
 
 </body>
 </html>
+
 
